# OpenCL-Benchmarking

./: CMakeLists.txt  Makefile  README.md  a.out  benchmark  benchmark.c  convolution.c  convolution.cl  convolution.cpp  load_kernel.h  multiply.cl  saxpy.cl
